--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gaode-spider",
   "version": "1.0.0",
-  "description": "gaode poi spider",
+  "description": "gaode spider",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,10 +9,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jsts": "^0.16.29",
+    "@types/pg": "^7.1.4",
+    "@types/node": "~8.0.34",
+    "@types/request": "~2.0.6",
     "file-system": "^2.2.2",
+    "jsts": "^1.4.0",
     "node-xlsx": "^0.11.0",
     "pg": "^7.3.0",
-    "puppeteer": "^0.10.2",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "typescript": "^2.5.3",
+    "gulp": "^3.9.1",
+    "gulp-typescript": "^3.2.2"
   }
 }
