--- a/src/config.json
+++ b/src/config.json
@@ -21,6 +21,12 @@
             "9704a57467ea998fea1ee69a085e2cfa",
             "dd8a2decd071381d1c65ef2b8096589b"
         ],
-        "city": "0755"
+        "city": "0755",
+        "extent": [
+            113.743998,
+            22.435977,
+            114.377085,
+            22.842835
+        ]
     }
 }
